2006-05-25  Guillem Jover  <guillem@debian.org>

	* scripts/install-info.pl: Exit if the lock file already exists.
	This change was lost when doing the i18n of the scripts.

2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>

	* scripts/install-info.pl: Use %! instead if $! to check for EEXIST.

2006-05-23  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (parsechangelog): Do not strip the epoch from
	the source:Upstream-Version substvar.

2006-05-23  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (usageerr): Use usage instead of
	usageversion.
	* scripts/dpkg-statoverride.pl (UsageVersion): Rename to ...
	(usageversion): ... this.
	* scripts/dpkg-parsechangelog.pl (usageversion): Split into usage
	and version functions. Print to stdout. Standarize output format.
	Add '--help' and '--version'.
	* scripts/dpkg-shlibdeps.pl: Likewise.
	* scripts/dpkg-distaddfile.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-genchanges.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.
	* scripts/changelog/debian.pl: Likewise.
	* scripts/dpkg-statoverride.pl: Likewise. Basename $0.
	* scripts/dpkg-architecture.pl: Likewise. Do not basename $0,
	use $progname instead.
	* scripts/dpkg-checkbuilddeps.pl: Use $progname instead of $me.
	(me): Remove variable.
	(usage): Standarize output format. Print to stdout. Add '-h' option.
	* scripts/dpkg-buildpackage.sh (usageversion): Split into
	showversion and usage functions. Print to stdout. Standarize output
	format. Add '--help' and '--version'.
	(version): Rename variable to ...
	(changesversion): ... this, otherwise there was no program version
	shown on output.
	* scripts/dpkg-scanpackages.pl: Basename $0.
	(options): Pass a sub to the help option calling usage and exit.
	Add '--version'.
	(usage): Switch variable to a function. Print to stdout. Standarize
	output.
	(version): New function.
	* scripts/dpkg-scansources.pl (Version): Rename variable to ...