@@ -66,6 +66,8 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Based on patch by Ben Pfaff. Closes: #368874
   * Correct default info directory for '--infodir' in intall-info man
     page (Ben Pfaff). Closes: #368875
+  * Print the bogus version and prefix the error message with 'dpkg: '
+    when using '--compare-versions'. Closes: #369177
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
