@@ -1,3 +1,8 @@
+2006-05-31  Guillem Jover  <guillem@debian.org>
+
+	* src/enquiry.c (cmpversions): Prefix the bad syntax error with a
+	'dpkg: ' and print the bogus version string.
+
 2006-05-25  Guillem Jover  <guillem@debian.org>
 
 	* scripts/install-info.pl: Exit if the lock file already exists.
